Add getAllBranchesTest